<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QR</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="scan_text">请对准二维码进行扫描！！</string>
    <string name="title_activity_result">ResultActivity</string>

    <string name="cancel">取消</string>
    <string name="appname_login">QR登录</string>
    <string name="login_in">登录</string>
    <string name="account">账号</string>
    <string name="pwd">密码</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="title_activity_login">QR登录</string>

    <!-- Strings related to activity_login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>